<resources>
    <string name="app_name">Souls</string>
    <string name="your_character">Your Character:</string>
    <string name="attack">Attack:</string>
    <string name="_10">10</string>
    <string name="defence">Defence:</string>
    <string name="speed">Speed:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="point">point left: </string>
    <string name= "Action">Action</string>
    <string name= "Inventory">Inventory</string>
    <string name="Money">Money:</string>
    <string name="Item">item</string>
    <string name="Next">next</string>
    <string name="shop">Shop</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="price1">Price1</string>
    <string name="price2">Price2</string>
    <string name="price3">Price3</string>
    <string name="money">Money</string>
</resources>
